--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.27.12",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.27.0"
+    "sass": "^1.27.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
